Version 0.300!
Critical Fixes:
- Ranged attacks and ammo (ref cache was to blame)
- Fixed selective targeting in Explore Mode

Visuals
- Most 3d Animations are OK
- Death/Hit anims still aren't always working!

Misc
Added Mika Pilke's dark music
Added and adjusted attack actions